@@ -1,3 +1,8 @@
+2019-11-15  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/69654
+	* gfortran.dg/derived_init_6.f90: New test.
+
 2019-11-15  Matthew Malcomson  <matthew.malcomson@arm.com>
 
 	* gcc.dg/rtl/aarch64/test-epilogue-set.c: New test.
